solve flash messages partially covered bug

--- a/app/assets/stylesheets/boot.css.scss
+++ b/app/assets/stylesheets/boot.css.scss
@@ -3877,6 +3877,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert {
+       margin-top: 20px;
   padding: 8px 35px 8px 14px;
   margin-bottom: 26px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
